[package]
edition = "2021"
name = "cave-game"
publish = false
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = [
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_winit",
  "hdr",
  "png",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "ktx2",
  "zstd",
  "x11",
] }
bevy-inspector-egui = { version = "0.13.0", features = [
  "bevy_render",
  "nightly",
] }
bevy_atmosphere = "0.4.1"
bevy_rapier3d = { version = "0.18.0", features = ["parallel", "simd-nightly"] }
iyes_loopless = "0.8.0"
iyes_progress = { version = "0.6.0", features = ["assets", "iyes_loopless"] }
leafwing-input-manager = "0.6.1"
noise = { version = "0.8.2", features = ["std"] }
rand = "0.8.5"
